--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-
+MONGODB_URI = mongodb+srv://vishwakarmaavinash299:Avinash9892@cluster0.fq1jt.mongodb.net/
+RESEND_API_KEY = re_YxEyciPN_ChHcWZ8YgsNL4BuYUjh7myEh
+NEXTAUTH_SECRET = "cp3xtif9ymHVn65utmtczTRPBp1NcYucEhny1kVjmhs="
+NEXTAUTH_URL= http://localhost:3000
